# sysexits-rs

./: .bumpversion.cfg  .bumpversion.cfg.license  .bumpversion.toml  .gitignore  AUTHORS.adoc  CHANGELOG.adoc  CITATION.cff  CONTRIBUTING.adoc  COPYING  COPYRIGHT  Cargo.lock.license  Cargo.toml  LICENSE-MIT  README.md  RELEASE-CHECKLIST.adoc  clippy.toml  justfile  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: CI.yaml  REUSE.yaml  SemverChecks.yaml  actionlint.yaml  cffconvert.yaml  cffconvert.yml  dependabot_auto_merge.yaml  mirror.yaml
LICENSES/: MIT.txt
benches/: convert.rs  exit_code.rs  result.rs
examples/: README.adoc  cat.rs  cmp.rs  isutf8.rs
src/: error.rs  exit_code.rs  lib.rs  sysexits.rs
src/exit_code/: consts.rs  convert.rs  fmt.rs  result.rs
