# SPDX-FileCopyrightText: 2022 Shun Sakai
# SPDX-FileCopyrightText: 2023 zSchoen
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "sysexits"
version = "0.7.13"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.61.0"
description = "The system exit codes as defined by <sysexits.h>"
documentation = "https://docs.rs/sysexits"
readme = "README.md"
repository = "https://github.com/sorairolake/sysexits-rs"
license = "Apache-2.0 OR MIT"
keywords = ["exitcode", "sysexits"]
categories = ["command-line-interface", "no-std", "os"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "cat"
path = "examples/cat.rs"
required-features = ["default"]

[[example]]
name = "cmp"
path = "examples/cmp.rs"
required-features = ["default"]

[[example]]
name = "isutf8"
path = "examples/isutf8.rs"
required-features = ["default"]

[dependencies]

[features]
default = ["std"]
std = []
nightly = ["extended_io_error"]
extended_io_error = ["std"]
