# SPDX-FileCopyrightText: 2022 Shun Sakai
# SPDX-FileCopyrightText: 2023 zSchoen
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "sysexits"
version = "0.8.5"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2024"
rust-version = "1.85.0"
description = "The system exit codes as defined by <sysexits.h>"
documentation = "https://docs.rs/sysexits"
readme = "README.md"
repository = "https://github.com/sorairolake/sysexits-rs"
license = "Apache-2.0 OR MIT"
keywords = ["exitcode", "sysexits"]
categories = ["command-line-interface", "no-std", "os"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "cat"
path = "examples/cat.rs"
required-features = ["std"]

[[example]]
name = "cmp"
path = "examples/cmp.rs"
required-features = ["std"]

[[example]]
name = "isutf8"
path = "examples/isutf8.rs"
required-features = ["std"]

[dev-dependencies]
clap = { version = "4.5.30", features = ["derive"] }
proptest = "1.6.0"
test-strategy = "0.4.0"

[features]
default = ["std"]
extended_io_error = ["std"]
nightly = ["extended_io_error"]
std = []

[lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"
